--- a/Module1/Kiemtra/Cau3.html
+++ b/Module1/Kiemtra/Cau3.html
@@ -9,18 +9,18 @@
 </body>
 </html>
 <script>
-    let str1 = "Le,Hong,Quan";
-    let str2 = "Hong,Thi,Ngu";
-    let arr1 = str1.split(",");
-    let arr2 = str2.split(",");
-    for (let i = 0; i < arr1.length; i++) {
-        for (let j = 0; j < arr2.length; j++) {
-             if ( arr1[i] === arr2[j]){
-                 alert("true")
-             }else{
-                 alert("false")
-
-             }
+    function kiemTra(str1,str2) {
+        let arr1 = str1.split("");
+        let arr2 = str2.split("");
+        for (let i = 0; i < arr1.length; i++) {
+            for (let j = 0; j < arr2.length; j++) {
+                if (arr1[i] === arr2[j]) {
+                  return true
+                } else {
+                    return false
+                }
+            }
         }
     }
+    console.log(kiemTra(Hong,HongQuan))
 </script>
