--- a/Module1/Kiemtra/Cau3.html
+++ b/Module1/Kiemtra/Cau3.html
@@ -9,6 +9,8 @@
 </body>
 </html>
 <script>
+    let str1 = "Hong"
+    let str2 = "HongQuan"
     function kiemTra(str1,str2) {
         let arr1 = str1.split("");
         let arr2 = str2.split("");
@@ -22,5 +24,5 @@
             }
         }
     }
-    console.log(kiemTra(Hong,HongQuan))
+    console.log(kiemTra(str1,str2))
 </script>
